Added the required Functions
Added the functions into the index.js file

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "mocha": "5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^1.1.3"
+  },
+  "dependencies": {
+    "expect.js": "^0.3.1"
   }
 }
